# LigidPainter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  LICENSE_BINARY_FORMAT.txt  MyProject.ligid  NSIS.template.in  README.md  Toolchain-macosx
LigidPainter/: CMakeLists.txt
LigidPainter/Main/src/: Box.hpp  Brush.hpp  Color.hpp  LigidPainter.h  Main.cpp  Mesh.hpp  Model.hpp  Mouse.hpp  Painter.hpp  Project.hpp  Renderer.cpp  Renderer.h  Shader.hpp  Skybox.hpp  Texture.hpp  Timer.hpp  UIElements.hpp  Util.hpp
LigidPainter/Main/src/3D/: Material.cpp  Material.hpp  MaterialModifier.cpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  SceneAxisDisplayer.cpp  SceneTiles.cpp  Skybox.cpp  ThreeD.hpp  ThreeDBox.cpp  ThreedPoint.cpp
LigidPainter/Main/src/ColorPaletteSystem/: ColorPalette.cpp  ColorPalette.hpp
LigidPainter/Main/src/ContextMenuSystem/: ContextMenus.cpp  ContextMenus.hpp
LigidPainter/Main/src/Core/: Application.cpp  Callback.cpp  Callback.h  Gl.cpp  LigidPainter.h  Load.cpp  Load.h  Load.hpp  MainLoop.cpp  ModelRead.cpp  Prep.hpp  ProcessTheNodeFile.hpp  Render.cpp  Render.h  Renderer.hpp  Sphere.cpp  Texture.cpp  Texture.h  UiActions.cpp  UiActions.h  UserInterface.cpp  UserInterface.h  UtilTimer.hpp  Utilities.cpp  Utilities.h  gl.h  mesh.cpp  mesh.h  messageBox.h  model.cpp  model.h
LigidPainter/Main/src/GUI/: Button.hpp  CheckBox.hpp  ColorPalette.hpp  ComboBox.hpp  ContextMenu.hpp  Dialogs.hpp  Elements.hpp  GUI.cpp  GUI.hpp  Mouse.hpp  Panel.hpp  Panels.hpp  RangeBar.hpp  TextBox.hpp  UI.hpp
LigidPainter/Main/src/Layers/: Layers.cpp  Layers.hpp
LigidPainter/Main/src/LibrarySystem/: Library.cpp  Library.hpp
LigidPainter/Main/src/LigidGL/: Clipboard.cpp  CreateWindow.cpp  LigidGL.hpp  README.md  WindowUtil.cpp  (+1 more)
LigidPainter/Resources/3D Models/: OOO.fbx  TDBrushCursor.fbx  halfCube.fbx  model.fbx  plane.fbx  sphere.fbx  sphereStri.fbx  triangulatedSphere.fbx  untitled.fbx
LigidPainter/Resources/Brushes/: Arrows.lgdbrush  Basket.lgdbrush  Bold Dots.lgdbrush  Bricks.lgdbrush  Chains.lgdbrush  Dirt.lgdbrush  Fabric.lgdbrush  Filth 2.lgdbrush  Gears.lgdbrush  Gravel.lgdbrush  Infrequent Dirt.lgdbrush  Mushrooms.lgdbrush  NewBrush(10).lgdbrush  NewBrush(11).lgdbrush  NewBrush(12).lgdbrush  NewBrush(13).lgdbrush  NewBrush(14).lgdbrush  NewBrush(15).lgdbrush  NewBrush(2).lgdbrush  NewBrush(3).lgdbrush  NewBrush(6).lgdbrush  NewBrush(7).lgdbrush  NewBrush(8).lgdbrush  Ropes.lgdbrush  Rotated Crosses.lgdbrush  Scratches.lgdbrush  Shapey Fade 2.lgdbrush  Smoke.lgdbrush  Soft.lgdbrush  Solid Fade.lgdbrush  Solid.lgdbrush  Sparkles.lgdbrush  Stone Wall.lgdbrush  Stone.lgdbrush  Stripes.lgdbrush  Triangles.lgdbrush  Voronoi.lgdbrush
LigidPainter/Resources/Filters/: Alpha_BlackRemoval.lgdfilter  Alpha_SaturationRemoval.lgdfilter  Alpha_WhiteRemoval.lgdfilter  Aqua.lgdfilter  Blackened.lgdfilter  Blooming.lgdfilter  CrimsonLight.lgdfilter  DemiHumanQueen.lgdfilter  FrenchGray.lgdfilter  FullValue.lgdfilter  GrayScale.lgdfilter  HighContrast.lgdfilter  HighSaturation.lgdfilter  Ink.lgdfilter  InvertFilter.frag  InvertFilter.lgdfilter  InvertSaturation.lgdfilter  InvertValue.lgdfilter  LowContrast.lgdfilter  LowSaturation.lgdfilter  Malformed.lgdfilter  Mexico.lgdfilter  MyDawn.lgdfilter  NightWarmth.lgdfilter  OldLetter.lgdfilter  ResistantBlue.lgdfilter  Sepia.lgdfilter  Sobel.lgdfilter  SolidBlue.lgdfilter  SolidGreen.lgdfilter  SolidRed.lgdfilter
LigidPainter/Resources/Icons/: 3DModel.li  IconLicenses.md  LICENSE.md  MaskGausBlur.li  README.md
LigidPainter/Resources/Materials/: Camouflage_1.lgdmaterial  Camouflage_2.lgdmaterial  Camouflage_3.lgdmaterial  Camouflage_4.lgdmaterial  Camouflage_5.lgdmaterial  Camouflage_6.lgdmaterial  Dust_Light.lgdmaterial  Dust_Regular.lgdmaterial  Dust_Smoke.lgdmaterial  Environment_Alien.lgdmaterial  Environment_Asphalt.lgdmaterial  Environment_AsphaltCracked.lgdmaterial  Environment_AsphaltDamaged.lgdmaterial  Environment_BasicMoss.lgdmaterial  Environment_Bricks.lgdmaterial  Environment_Cement.lgdmaterial  Environment_Cement2.lgdmaterial  Environment_ConcreteCeiling.lgdmaterial  Environment_DamagedStucco.lgdmaterial  Environment_DetailedMoss.lgdmaterial  Environment_Diesel.lgdmaterial  Environment_Grass.lgdmaterial  Environment_Green.lgdmaterial  Environment_Moss2.lgdmaterial  Environment_MossyStone.lgdmaterial  Environment_Mud.lgdmaterial  Environment_MudCracked.lgdmaterial  Environment_Soil.lgdmaterial  Environment_SoilMossy.lgdmaterial  Environment_SoilMossy2.lgdmaterial  Environment_Stone.lgdmaterial  Environment_StoneWall.lgdmaterial  Environment_TreeBark.lgdmaterial  Environment_TreeBarkGreen.lgdmaterial  Environment_TreeBarkMossy.lgdmaterial  Environment_Wood.lgdmaterial  Environment_WoodPale.lgdmaterial  Environment_WoodPale_duplicated.lgdmaterial  Fabric_1.lgdmaterial  Fabric_10.lgdmaterial  (+110 more)
LigidPainter/Resources/Nodes/: 01 PBR.node  02 Image Texture.node  03 Invert.node  04 Channels.node  05 Geometry.node  06 Color.node  07 Tissue.node  08 Perlin.node  09 Noise.node  10 HSV.node  11 Voronoi.node  12 Ramp.node  12 Water.node  13 Droplets.node  13 Water.node  14 Brick.node  14 Droplets.node  15 Brick.node  15 Outlines.node  16 Outlines.node  17 Math.node  17 Normal Outline.node  18 Math.node  18 Mix.node  19 Mix.node  19 Shapes.node  20 Musgrave.node  20 Shapes.node  21 Blur.node  22 Blur.node  22 Repeat.node  23 Magic.node  24 Gradient.node  24 Repeat.node  25 Magic.node  25 Transform.node  26 Cross Around.node  26 Dot Around.node  26 Gradient.node  27 Pixelate.node  (+14 more)
LigidPainter/Resources/Shaders/: 2DPainting.frag  2dPainting.frag  2dPainting.vert  3DModel.frag  3DModel.vert  Depth3D.frag  PBR.frag  Painting.frag  PrefilterSkybox.frag  Skybox.frag  Skybox.vert  SkyboxBall.frag  blur.frag  blur.vert  fragmentShaderSource.glsl  hue.frag  hue.vert  icons.frag  out.frag  out.vert  screenDepth.vert  skybox.vert  skyboxblur.frag  skyboxblur.vert  ui.frag  ui.vert  vertexShaderSource.glsl
LigidPainter/Resources/Text/: ProjectSettings.settings  README.txt
LigidPainter/Resources/Textures/: LICENSE.md  README.md
(+739 files in other folders)
